lib/imperator/rule_parser.kpeg
%% name = RuleParser
%% ctag_node = ast Tag(name)
%% and_node = ast And
%% or_node = ast Or
%% phrase_node = ast Phrase(left, conj, right)

%%{
attr_reader :ast
}

lp = "("
rp = ")"
space = /\s/
term = < /\w+/ > ~ctag_node(text)
and = "and" ~and_node
or = "or" ~or_node
conj = and | or
phrase = (phrase:l space+ conj:c space+ phrase:r) ~phrase_node(l, c, r) | lp phrase rp | term

root = phrase:t { @ast = t }
